# vinted_bot

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  fetcher.py  filters.py  main.py  notifier.py  parser.py  scheduler.py  storage.py
tests/: __init__.py  conftest.py  test_filters.py  test_integration.py  test_parser.py
tests/fixtures/: api_response.json  html_response.html
